# ncm-c

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  export_html.c  main.c
backend/: kernel_probe.c  kernel_probe.h  nl_listener.c  nl_listener.h  scanner.h  scanner_lin.c  scanner_win.c
doc/: architecture_analysis.md  feature_roadmap.md
lib/: logic.c
output/: ncm-linux
